cats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats
  labels:
    app: cats
spec:
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: cats
  type:
    ClusterIP
