catsmemeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats
  labels:
    app: cats
spec:
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: cats
  type:
    LoadBalancer # ClusterIP , #NodePort , None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cats-deployment
  labels:
    app: cats
spec:
  revisionHistoryLimit: 3
  replicas: 3
  selector:
    matchLabels:
      app: cats
  template:
    metadata:
      labels:
        app: cats
    spec:
      containers:
      - name: cats
        image: mitchybgood/cats:ubuntu-1.0
        ports:
          - name: http-server
            containerPort: 80
