dogs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogs
  labels:
    app: dogs
spec:
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: dogs
  type:
    ClusterIP
