simplehomepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplehomepage
  labels:
    app: simplehomepage
spec:
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: simplehomepage
  type:
    LoadBalancer
